tdarr/components/app/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: server-svc
spec:
  ports:
    - port: 8266
      targetPort: server
      protocol: TCP
